--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
   color: #fff;
   background: url("../img/bg.JPG") top center no-repeat;
   background-size: cover;
-  position: relative;
+  position: absolute;
 }
 
 body::before {
