--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,9 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #fff;
-  background: url("../img/bg.JPG") top center no-repeat;
+  background: url("../img/bg.JPG") top right no-repeat;
   background-size: cover;
-  position: absolute;
+  position: relative;
 }
 
 body::before {
@@ -26,9 +26,10 @@ body::before {
   background: rgba(34, 34, 34, 0.8);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 992px) {
   body {
     background-attachment: fixed;
+    padding-left: 160px;
   }
 }
 
