--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #fff;
-  background: url("../img/bg.JPG") top right no-repeat;
+  background: url("../img/bg.JPG") top center no-repeat;
   background-size: cover;
   position: relative;
 }
