--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -10,22 +10,22 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #040404;
   color: #fff;
+  background: url("../img/bg.jpg") top center no-repeat;
+  background-size: cover;
   position: relative;
-  background: transparent;
 }
 
 body::before {
   content: "";
-  position: fixed;
-  background: #040404 url("../img/bg.jpg") top right no-repeat;
-  background-size: cover;
+  position: absolute;;
+  
   left: 0;
   right: 0;
   top: 0;
   height: 100vh;
   z-index: -1;
+  background: rgba(34, 34, 34, 0.8);
 }
 
 @media (min-width: 1024px) {
