--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -1,9 +1,3 @@
-/**
-* Template Name: Personal - v4.10.0
-* Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
 /*--------------------------------------------------------------
 # General
@@ -18,8 +12,7 @@ body {
 
 body::before {
   content: "";
-  position: absolute;;
-  
+  position: absolute;
   left: 0;
   right: 0;
   top: 0;
@@ -28,9 +21,10 @@ body::before {
   background: rgba(34, 34, 34, 0.8);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1920px) {
   body::before {
     background-attachment: fixed;
+    padding-left: 200px;
   }
 }
 
